@@ -1,16 +1,20 @@
 -server
 -Xms4g
--Xmx8g
--XX:NewRatio=3
--Xss16m
+-Xmx4g
+-Xmn1536m
+-XX:MetaspaceSize=512m
+-XX:MaxMetaspaceSize=720m
+-XX:+UseG1GC
 -XX:+UseConcMarkSweepGC
 -XX:+CMSParallelRemarkEnabled
--XX:ConcGCThreads=4
+-XX:+CMSScavengeBeforeRemark
+-XX:CMSInitiatingOccupancyFraction=75
+-XX:+UseCMSInitiatingOccupancyOnly
+-XX:MaxTenuringThreshold=10
 -XX:ReservedCodeCacheSize=1024m
 -XX:+AlwaysPreTouch
 -XX:+TieredCompilation
 -XX:+UseCompressedOops
--XX:SoftRefLRUPolicyMSPerMB=50
--Dsun.io.useCanonCaches=false
 -Djava.net.preferIPv4Stack=true
+-Xverify:none
 -ea
